corrected alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30,6 +30,7 @@ h2 {
 
 #main-bio {
     display: flex;
+    align-items: center;
 }
 
 #contact-info {
